Fixed broken css line in CSS assessment

--- a/CSS_Assessment/style.css
+++ b/CSS_Assessment/style.css
@@ -10,7 +10,7 @@
 }
 
 #left, #right{
-    height 600px;
+    height: 600px;
 
 }
 
